--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Piyali Das",
   "license": "ISC",
+  "engines": {
+    "node": ">=12"
+  },
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
@@ -18,9 +21,23 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
+    "gulp-cache": "^1.1.3",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "imagemin": "^7.0.0",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-pngquant": "^5.0.1",
+    "imagemin-svgo": "^7.0.0",
+    "pngquant": "^4.0.0",
+    "pngquant-bin": "^3.1.1",
+    "svgo": "^2.3.1"
+  },
+  "dependencies": {
+    "npm": "^7.19.0"
   }
 }
